--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ header{
     padding-left:2rem;
     color:var(--accent-text-clr);
     animation:color 2s ease-in-out infinite alternate;
+    
 }
 
 input {
@@ -85,6 +86,7 @@ input:focus {
     position:relative;
     display:inline-block;
     color:var(--accent-clr);
+    cursor:pointer;
 }
 
 .menu{
@@ -156,6 +158,7 @@ input:focus {
 .cuenta span{
     padding:0 10px;
     color:var(--accent-text-clr);
+    cursor:pointer;
 }
 
 #videocam, #face, #notifications{
@@ -194,7 +197,7 @@ input:focus {
 
 section{
     display:grid;
-    grid-auto-rows:300px;
+    grid-auto-rows:350px;
     grid-template-columns:repeat(auto-fill, minmax(300px, 1fr));
     gap:50px;
     margin:0 6rem;
@@ -202,7 +205,7 @@ section{
 
 figure{
     width:300px;
-    height:300px;
+    height:350px;
     text-align:center;
     cursor:pointer;
     transition:.2s;
